--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,6 +8,6 @@
   = csrf_meta_tags 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 %body
-
-  = yield 
+  %content
+    = yield 
 
