--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,13 +1,15 @@
-!!! 5
+!!!
 %html
-%head
-  %title
-    Codemalaysia
-  =stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
-  = javascript_include_tag "application", "data-turbolinks-track" => true 
-  = csrf_meta_tags 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-%body
-  %content
-    = yield 
-
+  %head
+    %meta{:name => "viewport", :content => "width=device-width, initial-scale=1.0"}
+    %title= content_for?(:title) ? yield(:title) : 'Code Malaysia'
+    %meta{:name => "description", :content => "#{content_for?(:description) ? yield(:description) : 'Essay Jack'}"}
+    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
+    = javascript_include_tag 'application', 'data-turbolinks-track' => true
+    = csrf_meta_tags
+  %body
+    %header
+      = render 'layouts/navigation'
+    %main{:role => "main"}
+      .container-fluid
+        = yield
