--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,92 +1,104 @@
-%nav.navbar.navbar-default.navbar-fixed-top.navbar-inverse
-  .container
-    .navbar-header
-      %button.navbar-toggle{"data-target" => ".navbar-collapse", "data-toggle" => "collapse", :type => "button"}
-        %span.sr-only Toggle navigation
-        %span.icon-bar
-        %span.icon-bar
-        %span.icon-bar
-      = link_to 'CodeMalaysia', root_path, class: 'navbar-brand'
-    .collapse.navbar-collapse
-      %ul.nav.navbar-nav.pull-right
-        %li= link_to 'Home', root_path
-
-
-.container 
-  .jumbotron 
-    %h1
-      Finishing School
-
+.row
+  .col-xs-12.jumbotron.banner
+    %h1 Finishing School
     %p Finishing school targets computer science university students in their penultimate and final semesters. The goal of this program is to infuse students with advanced programmer hacks both technical as well as non technical in nature. Students join our sessions to level up as programmers, just in time to impress their new batch of potential suitors.
 
-  %p.lead
-    Over the course of 3 months students will work in teams of 4 students and one senior programmer to create 1 MVP for a startup. This minimum viable product  will only be created for startups that don't already have a product but have done market validation of their idea and problem (see lean startup). In validating their ideas the startup helps students create products that the market actually want and will pay for when they are done with the MVP. 
-  .row
-    .col-md-4
-      %p
-      At the end of the 3 months the MVP will be presented to the startup for them to sell to their already identified markets. These startups are then responsible for marketing and subsequently growing the product and technical aspects of their ideas. At this point students are free to do one of 2 things with what they have gained over the 3 months. 
-    .col-md-4
-      %p
-        Fork the project and create and v1.1 of it so they might use it for their FYP submission. Mind you students will have between 3 months to 9 months to continue work on their FYP's at this point. Having spent the 3 months understanding what the market needs and possibly seeing alternative solutions to solve their problem, a second option for students to take is to create a completely new product that they can use for their FYP submission. 
-    .col-md-4    
-      %p
-        Regardless of their choice students that have completed the program are invited to a code demo day where they are give the chance to show off how they have grown to startups looking to recruit. 
+    %a.btn.btn-default.btn-lg.btn-cta{href: '#learnmore'} Learn More
 
-  %p.lead
-    Oh and we are running 2 batches of this program. Each batch will accommodate up to 32 students. Its free to join but only the most awesome students will be given a seat so read how to join and lets get started yo.
+.row
+  .col-xs-12.learnmore
+    %h2.center 4 Students + 1 Senior Programmer x 3 months = 1 Minimum Viable Product
 
-  %br
-  %br
-  %br
-  %br
-
-  .jumbotron
-    %h2
-      Growth areas
-    %p
-      Upon speaking to a slew of startups that are desperate to hire programmer talent, we compiled the top 5 things that technology startups seem to be looking for when they hire a technical person. 
-  %row
-    %ul
-      %li
-        %h4
-          A strong ability to communicate
-        %p
-          Working with the good folks of SOLS we will cover english for communication and presentation skills. The more participants practice the better they get so we have engineered the course to maximise their chances to speak up
-      %li
-        %h4
-          Collaboration and ability to work as part of a team
-        %p
-          The MVP will be created in an Agile manner, so participants will learn how to participate in scrums, standing meetings and other collaborative methodologies such as pair programming. 
-
-      %li
-        %h4
-          Capacity to learn and grow
-        %p
-          Go google it is a fundamental for this growth area, but more than that participants will be trained on accelerated learning frameworks based on personal development guru Brian Tracy
-
-      %li
-        %h4
-          Critical thinking to solve problems
-      %p
-        Design thinking methods and thinking in systems will be the core of this growth area. Logic, math and a whole load of imagination will be gained here
-
-      %li
-        %h4
-          Technical capacity 
-      %p
-        The focus for this training session will be how to use ruby on rails to build web applications. Most of the learnings will be based on the rails tutorial by Michael Hartl
-
-    %h2
+.row-fluid.descriptions
+  .col-xs-12.col-lg-4.col-sm-4.col-md-4.students-description
+    %h4
+      %span.glyphicon.glyphicon-user
       Students
-    %p
-      If you are in your final year and love to code, drop us a note and want to join in this awesome program just drop us a note and we shall see what we can do. Space is seriously limited so do what you gotta do - we will select the most awesome of the awesome. 
 
-    %h2 
+    %p If you are in your final year and love to code, drop us a note and want to join in this awesome program just drop us a note and we shall see what we can do. Space is seriously limited so do what you gotta do - we will select the most awesome of the awesome.
+
+    %a.btn.btn-primary{href: '#students'} I Want In!
+
+  .col-xs-12.col-lg-4.col-sm-4.col-md-4.universities-description
+    %h4
+      %span.glyphicon.glyphicon-tower
       Universities
-    %p
-      If you are a lecturer and think there are some pretty amazing students in your class that would be that more amazing if they had a chance to join our completely free training program, you should forward this flyer to them and ask them to apply. 
 
-    %h2
-      Startups with ideas
+    %p If you are a lecturer and think there are some pretty amazing students in your class that would be that more amazing if they had a chance to join our completely free training program, you should forward this flyer to them and ask them to apply. 
+
+    %a.btn.btn-primary{href: '#universities'} How Do I Get Involved?
+
+  .col-xs-12.col-lg-4.col-sm-4.col-md-4.startups-description
+    %h4
+      %span.glyphicon.glyphicon-send
+      Startups
+
+    %p Everyone's got ideas, and if you can prove to us the market wants them drop us a line and we will take it under consideration. We are looking for early stage ideas.
+
+    %p Remember - don't pitch an idea to us, pitch a product that people want.
+
+    %a.btn.btn-primary{href: '#startups'} I Want an MVP
+
+%br{style: "clear: both;"}
+
+.row-fluid.growth
+  .col-xs-12.page-header
+    %h2.center Growth Areas
+
+  .container-fluid
+    .row
+      .col-xs-12.col-sm-4.col-md-4.col-lg-4
+        %h4
+          %span.glyphicon.glyphicon-cog
+          Technical
+        %p The focus for this training session will be how to use ruby on rails to build web applications. Most of the learnings will be based on the rails tutorial by Michael Hartl
+
+      .col-xs-12.col-sm-4.col-md-4.col-lg-4
+        %h4
+          %span.glyphicon.glyphicon-heart
+          Personal
+        %p Learn how to learn, how to apply creative thinking to solve problems and most importantly how to communicate all these awesome skills to other people.
+
+      .col-xs-12.col-sm-4.col-md-4.col-lg-4
+        %h4
+          %span.glyphicon.glyphicon-share
+          Social
+        %p The MVP will be created in an Agile manner, so participants will learn how to participate in scrums, standing meetings and other collaborative methodologies such as pair programming.
+
+%br{style: "clear: both;"}
+
+.row.footer
+  .col-xs-12.col-md-4.col-lg-4.col-sm-4
+    %h4 Locate Us
+
     %p
-      Everyone's got ideas, and if you can prove to us the market wants them drop us a line and we will take it under consideration. Remember - don't pitch an idea to us, pitch a product that people want. 
+      %b Makespace
+      %br
+      Lot 1-50, SS-Two Mall
+      %br
+      Jalan SS 2/72, Seksyen 19
+      %br
+      Petaling Jaya Selangor Malaysia
+      %br
+      %br
+      %a{href: 'http://waze.to/osrenU3mAiRFlWZ9Y6'} Click for Directions
+      %br
+      %br
+      +60 3 7931 9198
+      %br
+      %br
+      Work with us
+      %br
+      Hello
+      %a{href: 'http://tandemic.com'} tandemic
+      %br
+      Supported by
+      %a{href: 'http://mymagic.com.my'} MaGIC
+
+
+  .col-xs-12.col-md-8.col-lg-8.col-sm-8
+    %h4 Serving A Target Market
+
+    %p Codemalaysia is a community experiment managed by the guys that run makespace.my a resource and community gathering space for people who make stuff (often pretty cool stuff we might add). We figured that code is a great way to create, you learn some basics and then you start, continuing your learning as you make you get better and better along the way. Its pretty amazing what you can accomplish with a little bit of skill when it comes to computer programming.
+
+    %p We won't get into the other wonderful benefits such as teaching you to think and helping you better understand the landscape of the technical world we live in - for now lets just focus on the fact that with a little code you can do a lot of amazing things. 
