Link to Magic sign up doc

--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -17,7 +17,7 @@
 
     %p If you are in your final year and love to code, drop us a note and want to join in this awesome program just drop us a note and we shall see what we can do. Space is seriously limited so do what you gotta do - we will select the most awesome of the awesome.
 
-    %a.btn.btn-primary{href: '#students'} I Want In!
+    %a.btn.btn-primary{href: 'https://docs.google.com/forms/d/1pXvc8U4UJXiE4PCAJhqLiJdK9rX3WTR-Sm0a54tLtSY/viewform'} I Want In!
 
   .col-xs-12.col-lg-4.col-sm-4.col-md-4.universities-description
     %h4
