Add Contact Us Form.

--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -26,7 +26,7 @@
 
     %p If you are a lecturer and think there are some pretty amazing students in your class that would be that more amazing if they had a chance to join our completely free training program, you should forward this flyer to them and ask them to apply. 
 
-    %a.btn.btn-primary{href: '#universities'} How Do I Get Involved?
+    %a.btn.btn-primary{href: contact_us_teacher_path } How Do I Get Involved?
 
   .col-xs-12.col-lg-4.col-sm-4.col-md-4.startups-description
     %h4
@@ -37,7 +37,7 @@
 
     %p Remember - don't pitch an idea to us, pitch a product that people want.
 
-    %a.btn.btn-primary{href: '#startups'} I Want an MVP
+    %a.btn.btn-primary{href: contact_us_project_owner_path} I Want an MVP
 
 %br{style: "clear: both;"}
 
