--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -1,5 +1,5 @@
-%nav.navbar.navbar-default.navbar-fixed-top.navbar-inverse
-  .container-fluid
+%nav.navbar.navbar-default.navbar.navbar-inverse
+  .container
     .navbar-header
       %button.navbar-toggle{"data-target" => ".navbar-collapse", "data-toggle" => "collapse", :type => "button"}
         %span.sr-only Toggle navigation
