Change requested by Hakim
Added a new form, Collaborate Form
Made visual tweaks

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -66,8 +66,12 @@ body {
 
       .btn-primary {
         position: absolute;
-        top: 200px;
+        top: 220px;
       }
     }
   }
+}
+
+.modal-body {
+  padding: 0;
 }
