--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -9,6 +9,6 @@
       = link_to 'CodeMalaysia', root_path, class: 'navbar-brand'
     .collapse.navbar-collapse
       %ul.nav.navbar-nav.pull-right
-        %li= link_to 'Work with Us', root_path
-        %li= link_to 'Sign Up', root_path
-        %li= link_to 'Contact Us', root_path
+        %li= link_to 'Learn More', root_path + '#learnmore'
+        %li= link_to 'Collaborate', contact_us_collaborate_path
+        %li= link_to 'Contact Us', contact_us_teacher_path
