--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,13 +1,16 @@
 .row
   .col-xs-12.jumbotron.banner
-    %h1 Finishing School
-    %p Finishing school targets computer science university students in their penultimate and final semesters. The goal of this program is to infuse students with advanced programmer hacks both technical as well as non technical in nature. Students join our sessions to level up as programmers, just in time to impress their new batch of potential suitors.
+    %h1 Codemalaysia
+    %p Programmer Finishing School targets computer science university students in their penultimate and final semesters. The goal of this program is to infuse students with advanced programmer hacks both technical as well as non technical in nature. Students join our sessions to level up as programmers, just in time to impress their new batch of potential suitors.
 
     %a.btn.btn-default.btn-lg.btn-cta{href: '#learnmore'} Learn More
 
 .row
-  .col-xs-12.learnmore
+  .col-xs-12#learnmore
     %h2.center 4 Students + 1 Senior Programmer x 3 months = 1 Minimum Viable Product
+
+    %h3.center We work with
+
 
 .row-fluid.descriptions
   .col-xs-12.col-lg-4.col-sm-4.col-md-4.students-description
@@ -101,4 +104,17 @@
 
     %p Codemalaysia is a community experiment managed by the guys that run makespace.my a resource and community gathering space for people who make stuff (often pretty cool stuff we might add). We figured that code is a great way to create, you learn some basics and then you start, continuing your learning as you make you get better and better along the way. Its pretty amazing what you can accomplish with a little bit of skill when it comes to computer programming.
 
-    %p We won't get into the other wonderful benefits such as teaching you to think and helping you better understand the landscape of the technical world we live in - for now lets just focus on the fact that with a little code you can do a lot of amazing things. 
+    %p We won't get into the other wonderful benefits such as teaching you to think and helping you better understand the landscape of the technical world we live in - for now lets just focus on the fact that with a little code you can do a lot of amazing things.
+
+-# .modal.fade#collaborate{role: :dialog, "aria-hidden" => :true}
+-#   .modal-dialog.modal-md
+-#     .modal-content
+-#       .modal-header
+-#         %button{:type => :button, :class => :close, "data-dismiss" => :modal}
+-#           %span{"aria-hidden" => :true} &times;
+-#           %span.sr-only Close
+-#         %h4.modal-title Collaborate with Us
+-#       .modal-body
+-#         =image_tag('PFS-Gemcutters-01-01.jpg')
+-#       .modal-footer
+-#         %button.btn.btn-default{:type => :button, "data-dismiss" => :modal} Close
