Make routes a bit simpler.
* Fixed forms so they all work the same

--- a/app/views/contact_us/collaborate.html.haml
+++ b/app/views/contact_us/collaborate.html.haml
@@ -1,2 +1,13 @@
-=image_tag('PFS-Gemcutters-01-01.jpg')
+.row
+  .col-xs-12.col-md-8
+    %h1
+      Are you a rails programmer that wants to explore exotic asia?
+    %p.lead
+      Well here is your chance, if you have at least 3 years of experience building web applications on the rails framework we want you to come over for an extended holiday and teach a couple of students how to be awesome web developers. We pay you for this and you get to spend your free time exploring the many wonders of Asia (Malaysia is a 2 hour flight from everything you’ll want to see in this region) 
+
+    %p.lead
+      This is a 4 month gig and you will need to be based out of our funsome office in the suburbs of Kuala Lumpur during the first half of this time. After which you are welcome to work remotely as long as you check-in every other day with the students and us. 
+
+    %p.lead
+      If this sounds like something that would rock your socks we want to hear from you, drop us a lovely long email and tell us why you are perfect for this job work@codemalaysia.com
 =render 'form', request_from: 'Collaborate Form', :title => "Collaborate with Us"
