--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -10,5 +10,5 @@
     .collapse.navbar-collapse
       %ul.nav.navbar-nav.pull-right
         %li= link_to 'Learn More', root_path + '#learnmore'
-        %li= link_to 'Collaborate', contact_us_collaborate_path
-        %li= link_to 'Contact Us', contact_us_teacher_path
+        %li= link_to 'Collaborate', contact_form_path(form_page: :collaborate)
+        %li= link_to 'Contact Us', contact_form_path(form_page: :general)
