--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -9,6 +9,6 @@
       = link_to 'CodeMalaysia', root_path, class: 'navbar-brand'
     .collapse.navbar-collapse
       %ul.nav.navbar-nav.pull-right
-        %li= link_to 'Learn More', root_path + '#learnmore'
         %li= link_to 'Collaborate', contact_form_path(form_page: :collaborate)
+        %li= link_to 'About Us', root_path + '#footer'
         %li= link_to 'Contact Us', contact_form_path(form_page: :general)
