--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,11 @@
     = csrf_meta_tags
   %body
     %header
+      .header-message
+        .magic-collaboration
+          In collaboration with
+          %a{href: "http://mymagic.my/"}
+            = image_tag('magic.png', width: '90')
       = render 'layouts/navigation'
     %main{:role => "main"}
-      .container
-        = yield
+      = yield
