--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -72,7 +72,8 @@
 
   %br{style: "clear: both;"}
 
-  .row.footer#footer
+.container#footer
+  .row.footer
     .col-xs-12.col-md-4.col-lg-4.col-sm-4
       %h4 Locate Us
 
