--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -6,7 +6,7 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      = link_to 'CodeMalaysia', root_path, class: 'navbar-brand'
+      = link_to 'Codemalaysia', root_path, class: 'navbar-brand'
     .collapse.navbar-collapse
       %ul.nav.navbar-nav.pull-right
         %li= link_to 'Collaborate', contact_form_path(form_page: :collaborate)
