--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -6,11 +6,13 @@
 
       %a.btn.btn-default.btn-lg.btn-cta{href: '#learnmore'} Learn More
 
+.container.learnmore
+  .row
+    .col-xs-12
+      %h2.center 4 Students + 1 Senior Programmer x 3 months = 1 Minimum Viable Product
 .container
   .row
-    .col-xs-12#learnmore
-      %h2.center 4 Students + 1 Senior Programmer x 3 months = 1 Minimum Viable Product
-
+    .col-xs-12
       %h2.center We work with
 
 
