--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -35,6 +35,13 @@ body {
   }
 }
 
+.learnmore {
+  width: 100%;
+  background: #f2f2f2;
+  padding-top: 5px;
+  padding-bottom: 15px;
+}
+
 .jumbotron.banner {
   background: #C23B28;
   color: white;
@@ -78,14 +85,14 @@ body {
   }
 }
 
-.learnmore {
-  margin: -30px 0 15px 0;
-  padding: 20px;
-  background: #f2f2f2;
-  h2 {
-    margin: 10px 0 15px 0;
-  }
-}
+// .learnmore {
+//   margin: -30px 0 15px 0;
+//   padding: 20px;
+//   background: #f2f2f2;
+//   h2 {
+//     margin: 10px 0 15px 0;
+//   }
+// }
 
 .descriptions, .growth {
   margin-bottom: 15px;
