--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -12,7 +12,7 @@
       %h2.center 4 Students + 1 Senior Programmer x 3 months = 1 Minimum Viable Product
 .container
   .row
-    .col-xs-12
+    .col-xs-12.page-header
       %h2.center We work with
 
 
