--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 body {
-  margin-top: 30px;
+  margin-top: 80px;
 }
 
 .center {
@@ -65,12 +65,12 @@ body {
   min-height: 30px;
   height: 30px;
   background: #3c3c3c;
-  .container { 
-    .center {
-      font-size: 12px;
-      color: silver;
-      padding: 5px 0 0 0;
-    }
+  width: 100%;
+  .center {
+    font-size: 12px;
+    color: silver;
+    padding: 5px 0 0 0;
+    color: white;
   }
 }
 
