New gemcutters poster

--- a/app/views/pages/collaborate.html.haml
+++ b/app/views/pages/collaborate.html.haml
@@ -2,4 +2,4 @@
   .row.center
     .col-xs-12.page-header
       %h2 Collaborate with Us
-      =image_tag('PFS-Gemcutters-01-01.jpg')
+      =image_tag('gemcutters-poster.jpg')
