--- a/app/views/contact_us/collaborate.html.haml
+++ b/app/views/contact_us/collaborate.html.haml
@@ -1,8 +1,7 @@
 .container
   .row
     .col-xs-12.col-md-8
-      %h1
-        Are you a rails programmer that wants to explore exotic asia?
+      =image_tag('gemcutters-headline.png')
       %p.lead
         Well here is your chance, if you have at least 3 years of experience building web applications on the rails framework we want you to come over for an extended holiday and teach a couple of students how to be awesome web developers. We pay you for this and you get to spend your free time exploring the many wonders of Asia (Malaysia is a 2 hour flight from everything you’ll want to see in this region) 
 
