--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -89,6 +89,8 @@
         Petaling Jaya Selangor Malaysia
         %br
         %br
+        %a{href: '/location'} Click for Location Map
+        %br
         %a{href: 'http://waze.to/osrenU3mAiRFlWZ9Y6'} Click for Directions
         %br
         %br
