--- a/app/views/pages/location.html.haml
+++ b/app/views/pages/location.html.haml
@@ -1,5 +1,5 @@
 .container
   .row.center
     .col-xs-12.page-header
-      %h2 How to Locate Us
-      =image_tag('Makespace Map-01-01-01-01.jpg')
+      %h2 Become Awesome with Us
+      =image_tag('map.jpg')
