--- a/app/views/pages/learn.html.haml
+++ b/app/views/pages/learn.html.haml
@@ -2,4 +2,4 @@
   .row.center
     .col-xs-12.page-header
       %h2 Become Awesome with Us
-      =image_tag('PFS-A2-01.jpg')
+      =image_tag('pfs-poster.jpg')
