--- a/app/views/pages/location.html.haml
+++ b/app/views/pages/location.html.haml
@@ -1,5 +1,5 @@
 .container
   .row.center
     .col-xs-12.page-header
-      %h2 Become Awesome with Us
+      %h2 Location Map
       =image_tag('map.jpg')
