Added simplified schedule

--- a/app/views/pages/schedule.html.haml
+++ b/app/views/pages/schedule.html.haml
@@ -2,4 +2,130 @@
   .row.center
     .col-xs-12.page-header
       %h2 What we'll be doing
-      <iframe src="https://www.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=rt1q6ca6olmm59vrechong8l68%40group.calendar.google.com&amp;color=%2328754E&amp;ctz=Asia%2FKuala_Lumpur" style=" border-width:0 " width="800" height="600" frameborder="0" scrolling="no"></iframe>
+      / <iframe src="https://www.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=rt1q6ca6olmm59vrechong8l68%40group.calendar.google.com&amp;color=%2328754E&amp;ctz=Asia%2FKuala_Lumpur" style=" border-width:0 " width="800" height="600" frameborder="0" scrolling="no"></iframe>
+
+      %p.lead
+        The Finishing School course is divided into two components &mdash;
+        %b full-time, hands-on for the first month
+        and remote-working for months 2 &amp; 3
+
+      %table.table.table-striped.table-bordered#schedule
+        %tr
+          %td.te{colspan: 2}
+            %h4 Programmer Finishing School Schedule
+
+        %tr
+          %th Date
+          %th Agenda
+
+        %tr
+          %td.te{colspan: 2}
+            %b Month 1
+
+        %tr
+          %td
+            %b Week 1
+            %br
+            29th September &mdash; 3rd October 2014
+          %td
+            %ul
+              %li Install Ruby on Rails + Development Environment
+              %li Introduction to Git Version Control and Heroku 
+              %li Rails MVC - Introduction to the different parts of Rails
+              %li Development planning
+              %li Introduction to the Kanban method of development management using Trello
+              %li Rspec Testing and Static pages - Test Driven Development and building our first pages
+        %tr
+          %td
+            %b Week 2
+            %br
+            5th October &mdash; 11th October 2014
+          %td
+            %ul
+              %li Introduction to Ruby
+              %li Layouts, Bootstrap, CSS and Haml
+              %li More Rspec Testing
+              %li Databases, Models and Migrations (and tests)
+
+        %tr
+          %td
+            %b Week 3
+            %br
+            October 12th &mdash; 18th October 2014
+          %td
+            %ul
+              %li Rails Debugging and creating factories for tests
+              %li User Sign in, Sign up and Sign out. A more in depth look at Rails Models
+              %li Updating, Showing and Deleting Users. Learning to use Partials.
+
+        %tr
+          %td
+            %b Week 4
+            %br
+            October 19th &mdash; 25th October 2014
+          %td
+            %ul
+              %li Rails Debugging and creating factories for tests
+              %li User Sign in, Sign up and Sign out. A more in depth look at Rails Models
+              %li Updating, Showing and Deleting Users. Learning to use Partials.
+
+        %tr
+          %td.te{colspan: 2}
+            %b Month 2
+
+        %tr
+          %td
+            %b Week 5 & 6
+            %br
+            October 19th &mdash; November 8th 2014
+          %td
+            %ul
+              %li Remote collaborative development
+              %li Check in with group/co-ordinator every 2 days (Online)
+              %li More Extensive testing
+              %li Polishing of core funcions and designs
+              %li Additional Gems for specific functions (based on project requirements)
+
+        %tr
+          %td
+            %b Week 6 & 7
+            %br
+            November 9th &mdash; November 23rd 2014
+          %td
+            %ul
+              %li Internal Alpha 
+              %li Debugging and Testing
+
+        %tr
+          %td
+            %b Week 8
+            %br
+            November 24th &mdash; November 30th 2014
+          %td
+            %ul
+              %li Internal Alpha 
+              %li Debugging and Testing
+
+        %tr
+          %td.te{colspan: 2}
+            %b Month 3
+
+        %tr
+          %td
+            %b Week 9-11
+            %br
+            December 1st &mdash; December 21st 2014
+          %td
+            %ul
+              %li Design Update / UX Polish
+              %li Open Beta
+
+        %tr
+          %td
+            %b Week 12
+            %br
+            December 22nd &mdash; December 31st 2014
+          %td
+            %ul
+              %li v1.0
+              %li Students can now fork their application for their Final Year Project
