Tweaks to schedule page

--- a/app/assets/stylesheets/schedule.css.scss
+++ b/app/assets/stylesheets/schedule.css.scss
@@ -1,5 +1,10 @@
 table#schedule {
   td {
     text-align: left;
+    &.divider {
+      background: #3c3c3c;
+      color: white;
+      border: 1px solid #3c3c3c;
+    }
   }
 }
