--- a/app/views/pages/schedule.html.haml
+++ b/app/views/pages/schedule.html.haml
@@ -11,7 +11,7 @@
 
       %table.table.table-striped.table-bordered#schedule
         %tr
-          %td.te{colspan: 2}
+          %td.divider{colspan: 2}
             %h4 Programmer Finishing School Schedule
 
         %tr
@@ -19,7 +19,7 @@
           %th Agenda
 
         %tr
-          %td.te{colspan: 2}
+          %td.divider{colspan: 2}
             %b Month 1
 
         %tr
@@ -70,7 +70,7 @@
               %li Updating, Showing and Deleting Users. Learning to use Partials.
 
         %tr
-          %td.te{colspan: 2}
+          %td.divider{colspan: 2}
             %b Month 2
 
         %tr
@@ -107,7 +107,7 @@
               %li Debugging and Testing
 
         %tr
-          %td.te{colspan: 2}
+          %td.divider{colspan: 2}
             %b Month 3
 
         %tr
