Changed Sign Up Now button link on learn page

--- a/app/views/pages/learn.html.haml
+++ b/app/views/pages/learn.html.haml
@@ -6,6 +6,6 @@
       %br
 
       %p.text-centered
-        = link_to 'Sign Up Now!', contact_form_path(form_page: :collaborate), class: "btn btn-success btn-lg"
+        = link_to 'Sign Up Now!', 'https://docs.google.com/forms/d/1pXvc8U4UJXiE4PCAJhqLiJdK9rX3WTR-Sm0a54tLtSY/viewform', class: "btn btn-success btn-lg"
 
       =image_tag('pfs-poster.jpg', class: "img-responsive")
