--- a/app/views/contact_us/collaborate.html.haml
+++ b/app/views/contact_us/collaborate.html.haml
@@ -1,7 +1,7 @@
 .container
   .row
     .col-xs-12.col-md-8
-      =image_tag('gemcutters-headline.png')
+      =image_tag('gemcutters-headline.png', class: "img-responsive")
       %br
       %br
       %p.lead
