--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -20,5 +20,5 @@
             .fb-like{"data-href" => "https://www.facebook.com/pages/Programmer-Finishing-School/282100858648758", "data-width" => "100", "data-layout" => "button_count", "data-action" => "like", "data-show-faces" => false, "data-share" => false}
         %li= link_to 'Collaborate', contact_form_path(form_page: :collaborate)
         %li= link_to 'About Us', root_path + '#footer'
-        %li= link_to 'Schedule', 'schedule'
+        %li= link_to 'Schedule', '/schedule'
         %li= link_to 'Contact Us', contact_form_path(form_page: :general)
