--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,10 +1,20 @@
 .container.banner
   .row
-    .col-xs-12.jumbotron.banner
-      %h1 Codemalaysia
-      %p Programmer Finishing School targets computer science university students in their penultimate and final semesters. The goal of this program is to infuse students with advanced programmer hacks both technical as well as non technical in nature. Students join our sessions to level up as programmers, just in time to impress their new batch of potential suitors.
+    .jumbotron.banner
+      .container
+        .row
+          .col-xs-12
+            %h1 Codemalaysia
+        .row
+          .col-xs-12.col-md-8.col-lg-8{style: "margin-bottom: 20px;"}
+            %p Programmer Finishing School targets computer science university students in their penultimate and final semesters. The goal of this program is to infuse students with advanced programmer hacks both technical as well as non technical in nature. Students join our sessions to level up as programmers, just in time to impress their new batch of potential suitors.
 
-      %a.btn.btn-default.btn-lg.btn-cta{href: 'learn'} Learn More
+            %a.btn.btn-default.btn-lg.btn-cta{href: 'learn'} Learn More
+
+          .col-xs-12.col-md-4.col-lg-4.promovideo
+            .bs-example
+              .embed-responsive.embed-responsive-16by9
+                %iframe.embed-responsive-item{:allowfullscreen => "", :src => "//www.youtube.com/embed/gmAXPUXt4ZU?rel=0"}
 
 .container.learnmore
   .row
