Updated calendar; fixed case/wording

--- a/app/views/pages/schedule.html.haml
+++ b/app/views/pages/schedule.html.haml
@@ -25,12 +25,12 @@
             29th September &mdash; 3rd October 2014
           %td
             %ul
-              %li Install Ruby on Rails + Development Environment
-              %li Introduction to Git Version Control and Heroku 
-              %li Rails MVC - Introduction to the different parts of Rails
+              %li Install Ruby on Rails + development environment
+              %li Introduction to Git version control and Heroku
+              %li Introduction to Rails MVC
               %li Development planning
               %li Introduction to the Kanban method of development management using Trello
-              %li Rspec Testing and Static pages - Test Driven Development and building our first pages
+              %li Test Driven Development with Rspec + creation of static pages
         %tr
           %td
             %b Week 2
@@ -40,8 +40,8 @@
             %ul
               %li Introduction to Ruby
               %li Layouts, Bootstrap, CSS and Haml
-              %li More Rspec Testing
-              %li Databases, Models and Migrations (and tests)
+              %li More Rspec testing
+              %li Databases, models and migrations (and tests)
 
         %tr
           %td
@@ -50,9 +50,9 @@
             October 12th &mdash; 18th October 2014
           %td
             %ul
-              %li Rails Debugging and creating factories for tests
-              %li User Sign in, Sign up and Sign out. A more in depth look at Rails Models
-              %li Updating, Showing and Deleting Users. Learning to use Partials.
+              %li Rails debugging and creating factories for tests
+              %li User sign in, sign up, and sign out; a more in-depth look at Rails models
+              %li Updating, showing and deleting users. Learning to use partials.
 
         %tr
           %td
@@ -61,9 +61,9 @@
             October 19th &mdash; 25th October 2014
           %td
             %ul
-              %li Rails Debugging and creating factories for tests
-              %li User Sign in, Sign up and Sign out. A more in depth look at Rails Models
-              %li Updating, Showing and Deleting Users. Learning to use Partials.
+              %li Validating form inputs
+              %li Nested forms
+              %li A more complete User model with Devise
 
         %tr
           %td.divider{colspan: 2}
@@ -73,7 +73,7 @@
           %td
             %b Week 5 & 6
             %br
-            October 19th &mdash; November 8th 2014
+            October 26th &mdash; November 8th 2014
           %td
             %ul
               %li Remote collaborative development
