More calendar updates

--- a/app/views/pages/schedule.html.haml
+++ b/app/views/pages/schedule.html.haml
@@ -84,7 +84,7 @@
 
         %tr
           %td
-            %b Week 6 & 7
+            %b Week 7
             %br
             November 9th &mdash; November 23rd 2014
           %td
@@ -99,8 +99,7 @@
             November 24th &mdash; November 30th 2014
           %td
             %ul
-              %li Internal Alpha 
-              %li Debugging and Testing
+              %li Private Beta
 
         %tr
           %td.divider{colspan: 2}
